sumo/tests/traci/ChangeLane/InvalidNode/testclient_out.traci
TraCITestClient output file. Date: Mon Feb 02 15:11:18 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=0 y=491.75

-> Command sent: <ChangeLane>:
  NodeId=1 LaneId=0 fixTime=1
.. Answered with error to command (19), [description: Can not retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=100 PosFormat=1
----
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
----
Error while sending command: send failed: Software caused tcpip::Socket abort
